--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,11 +47,9 @@ p {
     margin-bottom: 32px;
 }
 
-.hero {
-    height: 800px;
+.hero img{
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -84,27 +82,16 @@ p {
     color: #ffffff;
 }
 
-
-
-
 .benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
-
-
 
 .benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-
-
-
-
 
 .search-engine-optimization {
     margin-bottom: 20px;
