--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,26 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* made the html file semantic meaning I have to change element names */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+/* made the html file semantic meaning I have to change element names */
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* made the html file semantic meaning I have to change element names */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,21 +35,34 @@ body {
     font-size: 20px;
 }
 
-.header div ul li {
+/* made the html file semantic meaning I have to change element names */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* decorates the links up top */
 a {
     color: #ffffff;
     text-decoration: none;
+    display: inline-block;
 }
 
+/* accessability for the links */
+a:hover{
+    text-decoration: underline;
+    background-color: white;
+    color:  #2a607c;
+}
+
+/* Makes the margins in the right section universal */
 p {
     font-size: 16px;
     margin-bottom: 32px;
 }
 
+/* removed the height and moved the url to the html file.
+ */
 .hero img{
     width: 100%;
     margin-bottom: 25px;
@@ -70,6 +86,7 @@ p {
     margin-left: 20px;
 }
 
+/* moved contents of three classes into .benefits */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -82,18 +99,24 @@ p {
     color: #ffffff;
 }
 
+/* shortened three classes into one. To a single
+class that change the h3 text under .content */
 .benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* shortened three classes into one. To a single
+class that change the images under .content */
 .benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization {
+/* reduced three seperate CSS elements dealing with each article under contents.
+made sure that any content that is under content and is an article inhabit these elements. */
+.content article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -102,28 +125,14 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
+/* shortened three classes into one. To a single
+class that change the images under .content */
 .content img {
     max-height: 200px;
 }
 
+/* shortened three classes into one. To a single
+class that change the h2 text under .content */
 .content h2 {
     margin-bottom: 20px;
     font-size: 36px;
